--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.1",
